@@ -245,9 +245,10 @@ Victor Toni
 Waldek Herka
 Will Wang
 William Ferguson
+Wolf Siberski
+Wolfgang Baer
 Wolfgang Frech
 Wolfgang Werner
-Wolf Siberski
 Yohann Roussel
 Yuji Yamano
 Yves Martin
